# cookiecutter-poetry-deep-learning

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/actions/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/configs/: config.yaml
{{cookiecutter.project_name}}/docs/: test.md  train.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: parse_config.py  test.py  train.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/base/: __init__.py  base_data_loader.py  base_model.py  base_trainer.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/data/: __init__.py  data_loaders.py  data_sets.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/logger/: logger.py  logger_config.json
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/model/: __init__.py  loss.py  metric.py  model.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/trainer/: trainer.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: __init__.py  util.py
